# yt-dlp-demo

./: .gitignore  Cargo.toml  index.html  package.json  tsconfig.app.json
.github/workflows/: release.yml
src/: main.rs  tool.rs
src-ts/: App.tsx  api.ts
