[package]
name = "yt-dlp-demo"
version = "0.1.0"
edition = "2024"

[dependencies]
salvo = { version = "0.78.0", features = ["serve-static"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
rust-embed = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"